# kaitukov

./: DinamicArray.cpp  func.cpp  func.h  main.cpp  photo1_filtered.pgm  photo1_noisy.pgm  structs.h
CourseWork/XSmall-HMI-Player/: CMakeLists.txt
PZ_1/: func.cpp  func.h  main.cpp  struct.h
PZ_2/: DinamicArray.cpp
PZ_3/: main.cpp  prog3_res.csv
PZ_3/photo/: photo1.pgm  photo2.pgm  photo3.pgm  photo4.pgm  photo5.pgm  photo6.pgm
PZ_3/processed/: photo3_filtered.pgm  photo3_noisy.pgm  photo4_filtered.pgm  photo4_noisy.pgm  photo5_filtered.pgm  photo5_noisy.pgm  photo6_filtered.pgm  photo6_noisy.pgm  read.me
PZ_4/: extendedarray.cpp  read.me
PZ_5/: 20251125_215304_data.csv  20251125_215304_data.txt  DinamicArrayModified.cpp
PZ_6/: PZ6
PZ_9/: PZ9.cpp
